--- a/scripts/install
+++ b/scripts/install
@@ -229,14 +229,14 @@ ynh_add_fpm_config
 # Reload NGINX
 #ynh_systemd_action --service_name=nginx --action=reload
 
-installId=$YNH_APP_ARG_ADMIN
-installPassword=$YNH_APP_ARG_PASSWORD
-installConfirmPassword=$YNH_APP_ARG_PASSWORD
-installMail=$(ynh_user_get_info --username=$admin --key=mail)
-installFirstname=$(ynh_user_get_info --username=$admin --key=firstname)
-installLastname=$(ynh_user_get_info --username=$admin --key=lastname)
-installDefaultData=1
-installSubmit=1
+#installId=$YNH_APP_ARG_ADMIN
+#installPassword=$YNH_APP_ARG_PASSWORD
+#installConfirmPassword=$YNH_APP_ARG_PASSWORD
+#installMail=$(ynh_user_get_info --username=$admin --key=mail)
+#installFirstname=$(ynh_user_get_info --username=$admin --key=firstname)
+#installLastname=$(ynh_user_get_info --username=$admin --key=lastname)
+#installDefaultData=1
+#installSubmit=1
 
 # Installation with curl
 #ynh_script_progression --message="Finalizing installation..." --time --weight=1
